@@ -1,5 +1,13 @@
 2009-01-12  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* gas/i386/sse-noavx.s: Add tests for lfence, mfence and movnti.
+	* gas/i386/x86-64-sse-noavx.s: Likewise.
+
+	* gas/i386/sse-noavx.d: Updated.
+	* gas/i386/x86-64-sse-noavx.d: Likewise.
+
+2009-01-12  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* gas/i386/opts.s: Add tests for add, adc, and, cmp, or, sbb,
 	sub and xor.
 	* gas/i386/x86-64-opts.s: Likewise.
